--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,26 @@
 /*  your css code here. If applicable */
+body{
+	background-color: #f5f5f5
+}
+.header{
+	background-color: #011e29;
+	color: white;
+	text-align: center;
+	padding: 2px;
+}
+div{
+	background-color: white;	
+	border-radius: 20px;
+	text-align: center;
+}
+.pictorial-news-section{
+	width: 200px;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	text-align: center;
+}
+img{
+	width: 160px;
+	margin: 20px;
+}
