--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,9 @@ body{
 	text-align: center;
 	padding: 2px;
 }
+.container{
+  display: flex;
+}
 div{
 	background-color: white;	
 	border-radius: 20px;
@@ -19,6 +22,12 @@ div{
 	flex-direction: column;
 	justify-content: flex-start;
 	text-align: center;
+}
+ul li{
+  list-style-type: none;
+}
+.main{
+  width: 300px;
 }
 img{
 	width: 160px;
